2009-04-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* assembly-with-methods.cs:
	* assembly-with-global-method.il: New test files with a global method.

	* assembly-with-complex-type.cs: Add more types and methods to be used generating tests.

	* cli-tables-tests.md: Tests for the methoddef table.
	
	* Makefile: Add new dependencies.

2009-04-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add read.ushort.

2009-04-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: More tests for the field table.

2009-04-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* assembly-with-complex-type.cs: Add stuff to
	fill constant, field rva and field marshal tables. 

	* cli-tables-tests.md: Initial tests for the field table.

	* gen-md-tests.c: Add or-byte and or-ushort effects. Fix
	documentation.

2009-04-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for the method list of the typedef table.

2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for the field list of the typedef table.

	* assembly-with-complex-type.cs: New assembly source. 

	* Makefile: Compile the new assembly source.

2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for the extends field of the typedef table.

2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: More tests for the typedef table.

2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add the or-uint effect.

2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* data-directory-tests.md:
	* header-tests.md:
	* resources-tests.md: Add comments related to faulty verification
	semantics on MS.

2009-04-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Initial tests for the typedef table.

2009-04-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: More tests for the typeref table.

2009-04-13 Rodrigo Kumpera  <rkumpera@novell.com>
